style(button-group): fixing alignment for icons on iOS

--- a/packages/styles/scss/components/buttongroup/_buttongroup.scss
+++ b/packages/styles/scss/components/buttongroup/_buttongroup.scss
@@ -57,6 +57,8 @@
     ::slotted([slot='icon']) {
       position: absolute;
       right: 1rem;
+      top: 13px;
+      bottom: 13px;
       flex-shrink: 0;
     }
     .#{$prefix}--btn {
